--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="post">
-
+  {% include post_nav.html %}
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">Posted {{ page.date | date: "%b %-d, %Y" }}{% if
@@ -14,5 +14,5 @@ layout: default
     {{ content }}
     {% include post_footer.html %}
   </article>
-
+  {% include post_nav.html %}
 </div>
