--- a/css/bootswatch.css
+++ b/css/bootswatch.css
@@ -10,7 +10,7 @@
 }
 .navbar-inverse .badge {
   background-color: #fff;
-  color: #eb6864;
+  color: #6e288c;
 }
 .navbar-brand {
   font-size: inherit;
@@ -45,11 +45,11 @@
 .has-error.radio-inline label,
 .has-error.checkbox-inline label,
 .has-error .form-control-feedback {
-  color: #eb6864;
+  color: #6e288c;
 }
 .has-error .form-control,
 .has-error .form-control:focus {
-  border-color: #eb6864;
+  border-color: #6e288c;
 }
 .has-success .help-block,
 .has-success .control-label,
