--- a/css/bs/variables.less
+++ b/css/bs/variables.less
@@ -14,7 +14,10 @@
 @gray-light:             lighten(@gray-base, 60%);   // #999
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #EB6864;
+@black:                 #000;
+@white:                 #fff;
+
+@brand-primary:         #6e288c;
 @brand-success:         #22B24C;
 @brand-info:            #369;
 @brand-warning:         #F5E625;
@@ -46,7 +49,7 @@
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
-@font-family-base:        @font-family-serif;
+@font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          15px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
