Site nearly complete.  Need to do a pass for bugs. Need to update metadata on posts and drafts and move images to a more manageable spot.

--- a/_includes/post_nav.html
+++ b/_includes/post_nav.html
@@ -1,10 +1,8 @@
 <div class="post-nav-container row">
-  {% if page.previous %}
-  <div class="col-xs-6 left"><a rel="prev" href="{{ page.previous.url }}">&lt;
-    {{ page.previous.title }}</a></div>
-  {% endif %}
-  {% if page.next %}
-  <div class="col-xs-6 right"><a rel="next" href="{{ page.next.url }}">{{
-    page.next.title }} &gt;</a></div>
-  {% endif %}
+  <div class="col-xs-6 left">{% if page.previous %}
+  <a rel="prev" href="{{ page.previous.url }}">&lt;
+    {{ page.previous.title }}</a>{% endif %}</div>
+  <div class="col-xs-6 right">{% if page.next %}
+  <a rel="next" href="{{ page.next.url }}">{{
+    page.next.title }} &gt;</a>{% endif %}</div>
 </div>
