--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,13 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ol class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <!-- top-level pages -->
-          {% for spage in site.pages %}
+          <!-- top-level pages as defined in _data/top_menu.yml -->
+          {% for spage in site.data.top_menu %}
           {% if spage.title %}
-          <li class="{% if page.url == spage.url %}active{%else%} {%endif%}">
-            <a class="{% if page.url == spage.url %}active{%else%} {%endif%}"
-               href="{{ spage.url | prepend: site.base-url }}">
+          <li
+              class="{% if page.url == spage.url %}active{%else%}inactive{%endif%}">
+            <a class="{% if page.url == spage.url %}active{%else%}inactive{%endif%}"
+               href="{{ spage.url | prepend:site.baseurl }}">
               {{spage.title }}
             </a>
           </li>
@@ -17,55 +17,14 @@
           {% endfor %}
           <!-- end: top-level pages -->
         </ol>
-
-        <form class="search navbar-form navbar-right">
-          <input class="site-search-box form-control" type="text"
-                 placeholder="Search">
-        </form>
-
-        <div class="social navbar-right">
-
-          {% if site.twitter_username %}
-          <a href="#"><span class="fa-stack social-icon">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-          </span></a>
-          {% endif %}
-
-          {% if site.twitter_facebook_username %}
-          <a href="https://www.facebook.com/dialog/feed?app_id=694165360698061&link=http%3A%2F%2FARTICLE_URL&picture=http%3A%2F%2FIMAGE_URL.JPG&name=TITLE&caption=%20&description=DESCRIPTION&redirect_uri=http%3A%2F%2Fwww.facebook.com%2F"><span class="fa-stack social-icon">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-          </span></a>
-          {% endif %}
-
-          {% if site.pinterest_username %}
-          <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2FARTICLE_URL&media=http%3A%2F%2FIMAGE_URL&description=DESCRIPTION"><span class="fa-stack social-icon">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
-          </span></a>
-          {% endif %}
-
-          {% if site.google_username %}
-          <a href="#"><span class="fa-stack social-icon">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-google fa-stack-1x fa-inverse"></i>
-          </span></a>
-          {% endif %}
-
-          <a href="#"><span class="fa-stack social-icon">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-          </span></a>
-
+        <div class="search navbar-form navbar-right">
+          {% include google_cs.html %}
         </div>
+        <div class="social navbar-right">{% include social_icons.html %}</div>
       </div>
     </nav>
   </div>
-  <div class="branding">
-    <h1 class="title">Dr. Julie Wei</h1>
-  </div>
-  <!-- line -->
+  <div class="branding"><h1 class="title">Dr. Julie Wei</h1></div>
   <div class="content-nav">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -81,21 +40,17 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-
         <div class="collapse navbar-collapse" id="djw-navbar-collapse">
           <ul class="nav navbar-nav">
-            <!-- post tags -->
+            <!-- post tag -->
             {% for tag in site.tags %}
-            <li><a href="{{ tag.url | prepend: site.baseurl }}">
+            <li><a href="{{site.baseurl}}{{site.tag_baseurl}}{{tag[0]}}">
               {{tag[0] | capitalize }}
-            </a></li>
-            {% endfor %}
-            <!-- end: post tags-->
+            </a></li>{% endfor %}
+            <!-- end: post tag-->
           </ul>
         </div>
-
       </div>
     </nav>
   </div>
-  <!-- line -->
 </header>
