--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">Posted {{ page.date | date: "%b %-d, %Y" }}
-    {% if page.author %} by {{ page.author }}{% endif %}{% if page.meta %} • {{
-      page.meta }}{% endif %}</p>
+    {% if page.author %} by {{ page.author }}{% endif %}{% if page.meta %} •
+      {{page.meta }}{% endif %}</p>
     <p class="post-meta">
       {% if page.categories.size > 0 %}
         In categories:
