--- a/_includes/post_nav.html
+++ b/_includes/post_nav.html
@@ -3,6 +3,6 @@
   <a rel="prev" href="{{ page.previous.url }}">&lt;
     {{ page.previous.title }}</a>{% endif %}</div>
   <div class="col-xs-6 right">{% if page.next %}
-  <a rel="next" href="{{ page.next.url }}">{{
-    page.next.title }} &gt;</a>{% endif %}</div>
+  <a rel="next" href="{{ page.next.url }}">
+    {{page.next.title }} &gt;</a>{% endif %}</div>
 </div>
