--- a/_includes/social_icons.html
+++ b/_includes/social_icons.html
@@ -1,36 +1,30 @@
 {% if site.twitter_username %}
-{% capture url_start %}{{site.method}}://{{site.host}}{% if site.port
-%}:{{site.port}}{% endif %}{{site.baseurl}}{% endcapture %}
-{% capture url%}{{url_start}}{{page.url}}{% endcapture %}
-{% capture description%}{{ 'Nothing Yet' | escape }}{% endcapture %}
-{% capture photo%}{{url_start}}{% if post.featured-image %}{{ post.featured-image }}{% else %}{{ '/img/default.png'}}{% endif %}{% endcapture %}
-{% capture title%}{%if page.title%}{{page.title}} | {{site.title}}{%else%}{{site.title}}{%endif%}{%endcapture%}
+{% capture url_start %}{{site.method}}://{{site.host}}{% if site.port %}:{{site.port}}{% endif %}{{site.baseurl}}{% endcapture %}
+{% capture url %}{{url_start}}{{page.url}}{% endcapture %}
+{% capture description %}{{ 'Nothing Yet' | escape }}{% endcapture %}
+{% capture photo %}{{url_start}}{% if post.featured-image %}{{ post.featured-image }}{% else %}{{ '/img/default.png'}}{% endif %}{% endcapture %}
+{% capture title %}{%if page.title%}{{page.title}} | {{site.title}}{%else%}{{site.title}}{%endif%}{%endcapture%}
 <a target="_blank" href="https://twitter.com/home?status=Check%20out%20this%20great%20info%20about%20%23kidshealth!%20{{url | escape}}%20%40ahealthierwei"><span class="fa-stack social-icon">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-          </span></a>
+            <i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a>
 {% endif %}
 {% if site.facebook_username %}
 <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{url | escape}}"><span
     class="fa-stack social-icon">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-          </span></a>
+            <i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a>
 {% endif %}
 {% if site.pinterest_username %}
 <a target="_blank" href="https://pinterest.com/pin/create/button/?url={{url | escape}}&media={{photo | escape}}&description={{description | escape}}"><span class="fa-stack social-icon">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
-          </span></a>
+            <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i></span></a>
 {% endif %}
 {% if site.google_username %}
 <a target="_blank" href="https://plus.google.com/share?url={{url | escape}}"><span
     class="fa-stack social-icon">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-google fa-stack-1x fa-inverse"></i>
-          </span></a>
+            <i class="fa fa-google fa-stack-1x fa-inverse"></i></span></a>
 {% endif %}
 <a href="mailto:?&subject=Great info about kids health&body=Check%20out%20this%20great%20info%20about%20kids%20health!%20{{url}}%20"><span class="fa-stack social-icon">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-          </span></a>
+            <i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span></a>
