--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h3>Posts relating to &quot;{{page.category}}&quot;</h3>
+<h3>Posts relating to &quot;{{ page.title }}&quot;</h3>
 
 {% unless page.content == '' %}
 <p>{{ page.content }}</p>
